# weft-sdk

./: .gitignore  AGENTS.md  PIPELINE.md  README.md  package.json
.github/: dependabot.yml
.opencode/: worktree.jsonc
.release-candidates/: CHANGELOG.md  weft-app-00b6a6a2edaeac413b566c2bbde0c23b8e5100c3.json  weft-app-012455cfcc25bf87011ccc69d10b8a91a783a225.json  weft-app-016e5f13b1de42bcbaa2b60d590d447ce2b24a00.json  weft-app-025f4c6443d85d6d17f55c3c5f271cc5482ad380.json  weft-app-062eaca05a3e289f7b1e5ffe55d21c261f49c179.json  weft-app-07133274ebc57839090e2b40070e46dd7f088a1c.json  weft-app-0736d4dea7b34b51904e88f5c8d182c873f7695b.json  weft-app-08c2706687299e9ea6b8ed0d1e1626fea7834bdc.json  weft-app-10757985340f895eed50568914d063ac1b927ad1.json  weft-app-1268485744f61693cd4268bff63a40fb3f21f5c7.json  weft-app-1a1426a26dd086f7d465d15293fe7d39ba9999c0.json  weft-app-1a1a1e79618ad21402f60eaf6948be24ac33e26f.json  weft-app-2766ed00e9128484e72c64c4e3519fcd9d8cf471.json  weft-app-2ad9478e3453a69cccdb0123a6ec6c2ce6b9e79c.json  weft-app-2b6bf2dfb11e9511a0c82af0377ac196ef16bf13.json  weft-app-2be6aa0dea718d0730b5a8299c2ab131483b07c3.json  weft-app-32baf8b3c303af2619f7a18d2adefeac4a7206b5.json  (+59 more)
docs/: README.md
go/: README.md  go.mod  (+1 more)
python/: README.md  pyproject.toml
python/docs/: APIKeysApi.md  AccountApi.md  AccountDetails.md  Agent.md  AgentListResponse.md  AgentResponse.md  AgentStats.md  AgentsApi.md  AnalyticsApi.md  AnalyticsData.md  AnalyticsResponse.md  ApiKey.md  ApiKeyCreated.md  ApiKeyCreatedResponse.md  ApiKeyListResponse.md  AuthApi.md  AuthResponse.md  AuthResponseData.md  BalanceApi.md  BalanceResponse.md  ConfirmRequest.md  CreateAgentRequest.md  CreateApiKeyRequest.md  CreateWebhookEndpointRequest.md  DailyCountPoint.md  DailyVolumePoint.md  DefaultApi.md  EndpointRevenue.md  EnrollResourceRequest.md  EnrolledResource.md  EnrolledResourceResponse.md  Error.md  ErrorResponse.md  Fetch403Response.md  FetchApi.md  FetchBalanceSnapshot.md  FetchErrorResponse.md  FetchRequest.md  FetchRequestBody.md  FetchResponse.md  (+62 more)
python/src/weft_sdk/: __init__.py
python/src/weft_sdk/facilitator/: __init__.py  client.py  fee.py  middleware.py
python/tests/: test_client.py  test_fee.py
(+344 files in other folders)
