[project]
name = "weft-sdk"
version = "0.2.1"
description = "Unified Weft SDK for the Weft API and x402 Facilitator"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Weft Labs" }
]
requires-python = ">=3.10"
keywords = ["weft", "x402", "payments", "micropayments", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "x402>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/weft-labs/weft-sdk"
Documentation = "https://github.com/weft-labs/weft-sdk"
Repository = "https://github.com/weft-labs/weft-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.9",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.sdist]
include = ["src/weft_sdk", "docs", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/weft_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "weft_sdk/docs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["src/weft_sdk/generated"]

[[tool.mypy.overrides]]
module = "weft_sdk.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["x402.*", "flask.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "weft_sdk.facilitator.middleware"
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["attr-defined"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/weft_sdk/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
